[package]
name = "verlet_solver_nannou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
nannou = "^0.18.1"
winit = "0.26"
winit_input_helper = "0.12"
pixels = "0.9.0"
